tests/ui/endpoint_extra_param.stderr
error: subject parameter `b` is not declared in endpoint subject template
 --> tests/ui/endpoint_extra_param.rs:6:5
  |
6 |     _b: SubjectParam<String>,
  |     ^^

warning: unused imports: `NatsErrorResponse` and `SubjectParam`
 --> tests/ui/endpoint_extra_param.rs:1:18
  |
1 | use nats_micro::{NatsErrorResponse, SubjectParam, endpoint};
  |                  ^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
